Fix image covering problem

--- a/src/pages/Details.module.css
+++ b/src/pages/Details.module.css
@@ -21,8 +21,9 @@
 }
 
 .avatar img {
-  height: inherit;
-  width: inherit;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .details {
